style.css
/* ... */
.network-choice {
  display: flex;
  justify-content: center;
  position:relative;
  width: 100%;
  margin-bottom: 10px;
  height: 28px;
}
#choices .network-choice:last-child {
  margin-bottom: 0;
}
#choices .network-choice:first-child {
  margin-top: 0;
}

.network-switch-label, .toggle {
  height: 100%;
  border-radius: 3px;
}
.network-switch-label {
  display: block;
  width: 236px;
  background-color: #000;
  border-radius: 3px;
  position: relative;
  cursor: pointer;
}
.toggle {
  position: absolute;
  width: 116px;
  background-color: var(--marvel-red);
  transition: .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
  margin: -2px 0 0 0px;
  border: 1px solid #444;
  height: 30px
}

.names {
  font-size: 90%;
  font-weight: bolder;
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  justify-content: space-around;
  align-items: center;
  align-content: center;
  user-select: none;
}
.names > div {
  font-size: 16px;
  font-weight: bold;
  text-transform: uppercase;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.left, .right{
  width: 50%;
  text-align: center;
}
.left {
  color: white;
}
.right {
  color: var(--marvel-red);
}

[type="checkbox"] {
  display: none;
}
[type="checkbox"]:disabled + .network-switch-label {
  cursor: progress;
}
[type="checkbox"]:checked + .network-switch-label .toggle {
  transform: translateX(100%);
}
[type="checkbox"]:checked + .network-switch-label .left {
  color: var(--marvel-red);
}
[type="checkbox"]:checked + .network-switch-label .right {
  color: white;
}

/* Credits & Help Footer */

#credits {
  position: absolute;
  bottom: 0px;
  width: 300px;
  line-height: 13px;
  border-top: 1px dashed #444;
  background-color: #222;
  z-index: 2;
}
#credits p {
  font-size: 12px;
  padding: 3px 0px 0 34px;
  margin: 0;
}
#credits p:last-child {
  padding-bottom: 3px;
}

#help {
  position: absolute;
  left: 0;
  margin: 4px;
  width: 28px;
  height: 28px;
  background-color: var(--marvel-red)!important;
  color: white;
  font-family: Arial;
  font-size: 20px;
  font-weight: bold;
  text-indent: 0px;
  text-align: center;
  cursor: pointer;
  box-sizing: border-box;
  display: flex;
  align-content: center;
  justify-content: center;
  align-items: center;
  border: 1px solid #444;
  border-radius: 20px;
}


/* -------- Comics Histogram ------------*/

#histogram-container {
  position: absolute;
  left: 302px;
  bottom: 0;
  width: calc(100% - 598px);
  margin-left: -2px;
  height: 75px;
  float: left;
  background-color: #2B2B2B;
  color: #AAA;
  text-align: center;
  box-shadow: 0px -2px 5px #000;
}

#histogram-title {
  font-size: 14px;
  font-weight: bold;
  padding-top: 2px;
  white-space: nowrap;
  position: sticky;
  z-index: 10;
  padding-left: 8px;
}

#histogram, #histogram-hover {
  display: flex;
  align-items: flex-end;
  margin: 0 12px;
  height: 32px;
  opacity: 0;
  -webkit-transition: opacity 0.5s ease-in-out;
  -moz-transition: opacity 0.5s ease-in-out;
  -o-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
}
#histogram {
  margin-top: 3px;
  border-bottom: 1px solid var(--marvel-red);
}
.histobar {
  display: block;
  background-color: var(--marvel-red);
  box-shadow: 0px 0px 2px var(--marvel-red);
  border-radius: 1px 1px 0 0;
}

#histogram-hover {
  margin-top: -31px;
  cursor: cell;
}
.histobar-hover {
  height: 36px;
  background-color: #555;
  opacity: 0;
}

#histogram-legend {
  font-size: 12px;
  font-weight: bold;
  color: #AAA;
  padding: 3px 4px 0 4px;
  text-align: left;
}
#histogram-legend div {
  position: relative;
  display: inline-block;
  width: 0;
}

#histogram-tooltip {
  display: none;
  position: absolute;
  top: 56px;
  background-color: #555;
  border-radius: 3px;
  padding: 2px 3px;
  font-size: 12px;
  font-weight: bold;
  color: white;
  z-index: 1;
}


/* -------- Extra sidebar with comics ------------*/

/* Closed comics bar */

#view-comics-container {
  position: absolute;
  right: 0;
  bottom: 0;
  width: 298px;
  height: 75px;
  float: left;
  background-color: #2B2B2B;
  color: #AAA;
  text-align: center;
}
#view-comics {
  margin-top: 20px!important;
}
#view-comics > span {
  padding: 7px 2px 7px 10px;
}
#view-comics img {
  transform: rotate(90deg);
  position: relative;
  top: 6px;
  margin-right: 5px;
}

/* Comics Bar */

#comics-bar {
  position: absolute;
  bottom: 0;
  width: 297px;
  height: 100%;
  margin: 0;
  overflow: hidden;
  font-size: 14px;
  background-color: #222;
  color: #AAA;
  float: left;
  text-align: center;
  box-shadow: -2px 0 5px #000;
  transform: scaleY(0);
  transform-origin: bottom;
  -webkit-transition: 0.3s ease-in-out;
  -moz-transition: 0.3s ease-in-out;
  -o-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
  z-index: 2;
}

#comics, #comic-details {
  padding: 5px;
  text-align: center;
  overflow-y: auto;
  line-height: 20px;
}
#comics {
  border-top: 1px dashed #444;
  overflow-x: hidden;
}
#comic-details {
  height: calc(100% / 2);
  border-top: 1px dashed #444;
}

/* Actions Buttons */

#comics-actions {
  width: 100%;
  height: 47px;
  text-align: center;
  display: inline-flex;
  justify-content: center;
  margin: 0px;
}
#comics-actions button {
  margin-top: 4px;
  margin-bottom: 4px;
}

button.sort-button.selected {
  cursor: default;
}
button.sort-button img {
  width: 26px;
  height: 26px;
  margin: 3px 0px 0px 1px;
}

#comics-pause {
  display: none;
}

#filter-comics {
  display: none;
}
#filter-input {
  width: calc(100% - 7px);
  margin: -1px 0px 4px 0px;
  padding: 0 10px;
  font-family: "DejaVu Sans Mono", "DejaVuSansMono", monospace;
  font-size: 14px;
  color: #FFF;
  background: #333;
  border: 1px solid #444;
  line-height: 24px;
  outline: none;
}
#comics-subtitle {
  margin-bottom: 5px;
  display: none;
}

/* Comics List */

#comics-list {
  display: contents;
}
/* ... */

